Add restrict keyword for g++, might improve things for the compiler.

--- a/polymul_doc.html
+++ b/polymul_doc.html
@@ -73,7 +73,7 @@ through the <tt>[]</tt> indexing operator, where the index is the order of the t
 <p>
 The <tt>polynomial</tt> class has the following methods:
 <h3><tt>polynomial::polynomial();</tt><h3>
-<h3><tt>polynomial::polynomial(numtype c0);</tt></h3>
+<h3><tt>polynomial::polynomial(const numtype &c0);</tt></h3>
 Constructors for <tt>polynomial</tt>. If the <tt>c0</tt> argument is given the
 polynomial is set to zero except the constant term which is set
 to <tt>c0</tt>.
